@startuml
allowmixing
!include Ventoriq_00_Style.puml

title Ventoriq - Gesamtarchitektur

top to bottom direction

skinparam nodesep 90
skinparam ranksep 90
skinparam linetype ortho

package "Frontend / Unity UI" as FRONTEND {
  class "UI-Controller\n<<MonoBehaviour>>" as UIController {
    Login / Registrierung
    Einstellungen
    Kassenbuch
    Belege
    Dokumente
    Export
  }
}

package "Backend-Services" as SERVICES {
  class AuthService <<Service>>
  class FinanceDashboardDataService <<Service>>
  class OfferInvoiceService <<Service>>
  class TextDocumentService <<Service>>
  class PDFStorage <<Service>>
}

package "Session / Zugriff" as SESSION {
  class StateManager <<Singleton>>
  class UserDatabaseAccess <<Helper>>
  class GlobalDatabaseManager <<Singleton>>
}

package "Datenbank" as DATABASE {
  abstract class DatabaseManager
  class DataBase <<SQLite-Fassade>>
}

package "Persistenz" as PERSIST {
  database "userData.db\nAuth-Datenbank" as AuthDB
  database "<username>.db\nNutzer-Datenbank" as UserDB
  folder "persistentDataPath\nDateien / PDFs / Textdokumente" as Files
}

DatabaseManager <|-- DataBase

UIController --> AuthService : nutzt
UIController --> FinanceDashboardDataService : nutzt
UIController --> OfferInvoiceService : nutzt
UIController --> TextDocumentService : nutzt
UIController --> PDFStorage : nutzt

AuthService --> StateManager : setzt Session
FinanceDashboardDataService --> UserDatabaseAccess : nutzt aktive DB
OfferInvoiceService --> UserDatabaseAccess : nutzt aktive DB
TextDocumentService --> UserDatabaseAccess : nutzt aktive DB
PDFStorage --> UserDatabaseAccess : nutzt aktive DB

UserDatabaseAccess --> StateManager : liest currentUser
UserDatabaseAccess --> GlobalDatabaseManager : fordert DB an
GlobalDatabaseManager --> DataBase : verwaltet Instanzen

DataBase --> AuthDB : Auth-Daten
DataBase --> UserDB : Fach-Daten
TextDocumentService --> Files : speichert Textdateien
PDFStorage --> Files : speichert PDFs

note bottom
Diese Übersicht zeigt nur die Hauptarchitektur.
Detailbeziehungen zwischen einzelnen Entities werden in den Moduldiagrammen gezeigt.
Dadurch bleiben die Pfeile kurz und die Architektur lesbar.
end note

@enduml